add buttons and boilerplate

--- a/burger_arrow/styles.less
+++ b/burger_arrow/styles.less
@@ -4,6 +4,8 @@
 
 body {
     background: #FFFFFF;
+    font-family: 'Helvetica Neue', helvetica, arial, sans-serif;
+    font-weight: 300;
 }
 
 .hide {
