add checkbox project

--- a/boilerplate/styles.less
+++ b/boilerplate/styles.less
@@ -1,11 +1,1 @@
-body {
-    background: #FFFFFF;
-    font-family: 'Helvetica Neue', helvetica, arial, sans-serif;
-    font-weight: 300;
-}
-
-.hide {
-    position: absolute;
-    left: -9999px;
-    top: -9999px;
-}
+@import '../default';
